--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -12,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.29"
+    "express": "^4.19.2",
+    "mongoose": "^5.13.22"
   }
 }
