--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,10 @@
   "name": "mern-stack-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:3000",
   "dependencies": {
-    "@material-ui/core": "^4.9.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +16,7 @@
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
