--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "mern-stack-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "proxy": "http://localhost:3000",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
